--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(benchmark_survival)
 importFrom(colorspace,rainbow_hcl)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_modify)
@@ -20,6 +21,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
