--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,scale_linetype_manual)
+importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(rlang,.data)
