--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,27 +2,37 @@
 
 export(benchmark_survival)
 importFrom(dplyr,"%>%")
-importFrom(dplyr,across)
-importFrom(dplyr,all_of)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_modify)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,rename)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(rlang,.data)
 importFrom(rlang,sym)
+importFrom(stats,approx)
 importFrom(stats,as.formula)
-importFrom(stats,predict)
+importFrom(stats,median)
 importFrom(stats,qnorm)
-importFrom(stats,var)
+importFrom(stats,setNames)
+importFrom(survival,Surv)
+importFrom(survival,basehaz)
+importFrom(survival,coxph)
+importFrom(survival,survfit)
 importFrom(tibble,tibble)
+importFrom(utils,globalVariables)
